init dx12 pipeline

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,13 @@
             "label": "C/C++: cl.exe build active file",
             "command": "cl.exe",
             "args": [
+                "/D_DEBUG",
                 "/Zi",
                 "/EHsc",
-                "/nologo",
+                "/Wall",
+                "/external:W0",
+                "/nologo", 
+                "/MDd",               
                 "/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "${file}"
             ],
