window mode switch

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,15 @@
 [Window][Debug##Default]
-Pos=266,16
+Pos=76,29
 Size=391,347
-Collapsed=0
+Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=147,104
 Size=550,680
+Collapsed=0
+
+[Window][Settings]
+Pos=2,0
+Size=299,290
 Collapsed=0
 
