better config stuff with sections, loading msaa state

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
-m_width=640
-height=480
-mode=0
+[DisplaySettings]
+window_width=1280
+window_height=720
+window_mode=0
+
+[GraphicsSettings]
+msaa_level=8
