testing and refactor

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [DisplaySettings]
-window_width=1920
-window_height=1080
-window_mode=1
+window_width=1024
+window_height=768
+window_mode=0
 
 [GraphicsSettings]
-msaa_level=1
+msaa_level=8
+vsync=1
