--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=61,19
+Pos=63,20
 Size=261,421
+Collapsed=0
+
+[Window][Scene Objects]
+Pos=1239,117
+Size=488,728
+Collapsed=0
+
+[Window][Greybox Objects]
+Pos=1369,52
+Size=519,585
 Collapsed=0
 
