array of pipeline  states

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,17 @@ Size=261,421
 Collapsed=0
 
 [Window][Scene Objects]
-Pos=1364,60
+Pos=1293,57
 Size=487,728
-Collapsed=1
+Collapsed=0
 
 [Window][Greybox Objects]
 Pos=1369,52
 Size=519,585
+Collapsed=0
+
+[Window][Globals]
+Pos=324,37
+Size=281,88
 Collapsed=0
 
