--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,12 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=47,20
+Pos=29,24
 Size=261,421
 Collapsed=0
 
 [Window][Scene Objects]
-Pos=1362,48
+Pos=1408,51
 Size=487,728
 Collapsed=1
 
@@ -24,7 +24,12 @@ Size=519,585
 Collapsed=0
 
 [Window][Globals]
-Pos=330,42
+Pos=299,33
 Size=281,163
+Collapsed=0
+
+[Window][Player Info]
+Pos=337,229
+Size=254,48
 Collapsed=0
 
